erKURITA
	* Warps maintainment
Evera
	* Everything.
	* Dungeon Teleport System NPCs.
	* iRO information gathering.
	* Kafra maintainment.
	* Taking requests.
Musashiden
	*Scripting iRO latest towns (warps, NPCs, ect.)
	*iRO information gathering.
Playtester
	* Monsters spawn, warps maintainment
KarLaeda
	* Fixing bugs
	* Adding new NPC


== Changelog ==

Date		Added
======
2006/12/19
	* Now root functions calls can have parenthesis (will take any parenthesis
	  after the function as the start of the argument list).
	- Updated swordman.txt and knight.txt accordingly.
	* Added year to the dates in this changelog.
	* Added sample localized NPC. [FlavioJS]
2006/12/17
	* Fixed exploit in The Sign Quest [KarLaeda]
2006/12/13
	* Fixed exploit in the Slotted Sunglasses Quest [KarLaeda]
2006/12/11
	* Adjusted Rachel Sanctuary entrance to prevent exploits [Playtester]
	- added Ktullanux to spawns until the quest is added
	- all Rachel MVPs now only respawn once a day to prevent exploits
	- uncommented Rachel Sanctuary spawns by default
	* Some cleanup & optimization for MvM Arena [KarLaeda]
	- Added missing close2 to Hunter Job Quest
	* Added Yuno Government Buildings warps. Thanks to $ephiroth [Lupus]
	- Added missing next, removed extra line to Wizard Job Quest
	* Fixed Rogue / Assassin exploit, thanks to El Nino
2006/12/06
	* Minor fix to the sign quest, thanks to theultramage for pointing it out [MasterOfMuppets]
2006/12/01
	* Fixed event's label for many quest-spawned monsters [KarLaeda]
	* Small fix to The Sign Quest [KarLaeda]
	* Removed outdated Thief Bug ID [Playtester]
	- 1017 and 1021 don't exist anymore
2006/11/30
	* Updated Shinokas Quest to leave no grabage vars [Lupus]
	- Added a log when players get their jobs
	* Added first version of Rachel Sanctuary spawns [Playtester]
	- commented for now
2006/11/28
	* Enabled Ice Dungeon spawns so they can be tested [Playtester]
2006/11/26